--- a/Dx2D/Dx2D.vcxproj.filters
+++ b/Dx2D/Dx2D.vcxproj.filters
@@ -180,9 +180,6 @@
     <ClInclude Include="Map.h">
       <Filter>Dx2D Framework\Scene\Prototype</Filter>
     </ClInclude>
-    <ClInclude Include="MovingObject.h">
-      <Filter>Dx2D Framework\Scene\Prototype</Filter>
-    </ClInclude>
     <ClInclude Include="honeyPlatform.h">
       <Filter>Dx2D Framework\Scene\Prototype\PlaceableObjects</Filter>
     </ClInclude>
@@ -191,6 +188,12 @@
     </ClInclude>
     <ClInclude Include="Shader.h">
       <Filter>Dx2D Framework\2. Manager\Shader</Filter>
+    </ClInclude>
+    <ClInclude Include="PlaceableObject.h">
+      <Filter>Dx2D Framework\Scene\Prototype\PlaceableObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="SimplePlatform.h">
+      <Filter>Dx2D Framework\Scene\Prototype\PlaceableObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -275,9 +278,6 @@
     <ClCompile Include="Map.cpp">
       <Filter>Dx2D Framework\Scene\Prototype</Filter>
     </ClCompile>
-    <ClCompile Include="MovingObject.cpp">
-      <Filter>Dx2D Framework\Scene\Prototype</Filter>
-    </ClCompile>
     <ClCompile Include="honeyPlatform.cpp">
       <Filter>Dx2D Framework\Scene\Prototype\PlaceableObjects</Filter>
     </ClCompile>
@@ -286,6 +286,12 @@
     </ClCompile>
     <ClCompile Include="Shader.cpp">
       <Filter>Dx2D Framework\2. Manager\Shader</Filter>
+    </ClCompile>
+    <ClCompile Include="PlaceableObject.cpp">
+      <Filter>Dx2D Framework\Scene\Prototype\PlaceableObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="SimplePlatform.cpp">
+      <Filter>Dx2D Framework\Scene\Prototype\PlaceableObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
