--- a/Dx2D/Dx2D.vcxproj
+++ b/Dx2D/Dx2D.vcxproj
@@ -155,6 +155,7 @@
   <ItemGroup>
     <ClInclude Include="AABB.h" />
     <ClInclude Include="Animation.h" />
+    <ClInclude Include="BallShooter.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="honeyPlatform.h" />
@@ -199,6 +200,7 @@
   <ItemGroup>
     <ClCompile Include="AABB.cpp" />
     <ClCompile Include="Animation.cpp" />
+    <ClCompile Include="BallShooter.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="honeyPlatform.cpp" />
