--- a/Dx2D/Dx2D.vcxproj.filters
+++ b/Dx2D/Dx2D.vcxproj.filters
@@ -198,6 +198,9 @@
     <ClInclude Include="BallShooter.h">
       <Filter>Dx2D Framework\Scene\Prototype\PlaceableObjects</Filter>
     </ClInclude>
+    <ClInclude Include="Projectile.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MainGame.cpp">
@@ -298,6 +301,9 @@
     </ClCompile>
     <ClCompile Include="BallShooter.cpp">
       <Filter>Dx2D Framework\Scene\Prototype\PlaceableObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Projectile.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
