In progress : placing stuff in mapTool mode

--- a/Dx2D/Dx2D.vcxproj
+++ b/Dx2D/Dx2D.vcxproj
@@ -173,6 +173,7 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="PlaceableObject.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerCursor.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Primitive2DObejct.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
@@ -220,6 +221,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="PlaceableObject.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerCursor.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Primitive2DObejct.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
