--- a/Dx2D/Dx2D.vcxproj.filters
+++ b/Dx2D/Dx2D.vcxproj.filters
@@ -88,6 +88,9 @@
     <Filter Include="Dx2D Framework\Scene\Objects\Collider">
       <UniqueIdentifier>{b120cfca-5a43-4aa9-a255-c7377d1afeff}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Dx2D Framework\Scene\Objects\PlaceableObjects\Base">
+      <UniqueIdentifier>{f7b0c84b-6874-4001-91e1-63acb5736a3b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -186,9 +189,6 @@
     <ClInclude Include="Shader.h">
       <Filter>Dx2D Framework\2. Manager\Shader</Filter>
     </ClInclude>
-    <ClInclude Include="PlaceableObject.h">
-      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
-    </ClInclude>
     <ClInclude Include="SimplePlatform.h">
       <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
     </ClInclude>
@@ -225,8 +225,14 @@
     <ClInclude Include="BallShooter.h">
       <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
     </ClInclude>
+    <ClInclude Include="GoalFlag.h">
+      <Filter>Dx2D Framework\Scene\PlayScene</Filter>
+    </ClInclude>
     <ClInclude Include="Ball.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="PlaceableObject.h">
+      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects\Base</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -308,9 +314,6 @@
     <ClCompile Include="Shader.cpp">
       <Filter>Dx2D Framework\2. Manager\Shader</Filter>
     </ClCompile>
-    <ClCompile Include="PlaceableObject.cpp">
-      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
-    </ClCompile>
     <ClCompile Include="SimplePlatform.cpp">
       <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
     </ClCompile>
@@ -347,8 +350,14 @@
     <ClCompile Include="BallShooter.cpp">
       <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
     </ClCompile>
+    <ClCompile Include="GoalFlag.cpp">
+      <Filter>Dx2D Framework\Scene\PlayScene</Filter>
+    </ClCompile>
     <ClCompile Include="Ball.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="PlaceableObject.cpp">
+      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects\Base</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
