--- a/Dx2D/Dx2D.vcxproj
+++ b/Dx2D/Dx2D.vcxproj
@@ -191,6 +191,8 @@
     <ClInclude Include="SimplePlatform.h" />
     <ClInclude Include="SingletonBase.h" />
     <ClInclude Include="SoundManager.h" />
+    <ClInclude Include="SpinWheel.h" />
+    <ClInclude Include="SpringPlatform.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -236,6 +238,8 @@
     <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="SimplePlatform.cpp" />
     <ClCompile Include="SoundManager.cpp" />
+    <ClCompile Include="SpinWheel.cpp" />
+    <ClCompile Include="SpringPlatform.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
