--- a/Dx2D/Dx2D.vcxproj.filters
+++ b/Dx2D/Dx2D.vcxproj.filters
@@ -222,6 +222,12 @@
     <ClInclude Include="GoalFlag.h">
       <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
     </ClInclude>
+    <ClInclude Include="SpinWheel.h">
+      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="SpringPlatform.h">
+      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MainGame.cpp">
@@ -333,6 +339,12 @@
       <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
     </ClCompile>
     <ClCompile Include="GoalFlag.cpp">
+      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="SpinWheel.cpp">
+      <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="SpringPlatform.cpp">
       <Filter>Dx2D Framework\Scene\Objects\PlaceableObjects</Filter>
     </ClCompile>
   </ItemGroup>
